<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/st_rl_parent" >

    <RelativeLayout
        android:id="@+id/relTopHeader"
        style="@style/st_rl_top" >

        <TextView
            android:id="@+id/tvActName"
            style="@style/st_tv_header_act_name" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnSelectAddWay"
        android:layout_width="@dimen/dm_iv_size"
        android:layout_height="@dimen/dm_iv_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dm_iv_margin"
        android:background="@drawable/add_vocab" >
    </ImageButton>

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="@dimen/dm_iv_size"
        android:layout_height="@dimen/dm_iv_size"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dm_iv_margin"
        android:layout_toLeftOf="@+id/btnSelectAddWay"
        android:background="@drawable/ic_save" >
    </ImageButton>

    <!-- ********************************************************************************************************** -->

    <RelativeLayout
        android:id="@+id/rlBottomFake"
        style="@style/st_rl_fake"
        android:layout_below="@id/relTopHeader" >

        <RelativeLayout
            android:id="@+id/rlTopChildLayoutFake"
            style="@style/st_rl_fake_middle"
            android:layout_above="@+id/relBottomChildLayoutFake" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relBottomChildLayoutFake"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_dark_line_height"
            android:layout_alignParentBottom="true" >
        </RelativeLayout>
    </RelativeLayout>
    <!-- ********************************************************************************************************** -->

    <RelativeLayout
        android:id="@+id/relBottomPart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relTopHeader" >

        <RelativeLayout
            android:id="@+id/rlMiddleContent"
            style="@style/st_rl_middle_content"
            android:layout_above="@+id/rlBottomLine" >

            <LinearLayout
                android:id="@+id/linLayHeaderForList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:id="@+id/rlEditFieldsHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="@dimen/dm_edit_vocab_padding" >

                    <TextView
                        android:id="@+id/tvVocabName"
                        style="@style/st_text_above_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/s_vocab_name" />

                    <EditText
                        android:id="@+id/edtVocabName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvVocabName" />

                    <TextView
                        android:id="@+id/tvVocabDescription"
                        style="@style/st_text_above_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/edtVocabName"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/s_vocab_description" />

                    <EditText
                        android:id="@+id/edtVocabDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tvVocabDescription" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/wordsListHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/linLayHeaderForList"
                    android:layout_weight="1"
                    android:padding="@dimen/dm_edit_vocab_padding" >

                    <ListView
                        android:id="@+id/lvWords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never" >
                    </ListView>

                    <TextView
                        android:id="@+id/empy"
                        style="@style/st_text_white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/col_gray_gainsboro"
                        android:gravity="center"
                        android:text="@string/s_empty_list" >
                    </TextView>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlBottomLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_dark_line_height"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/tvVersionSHOW"
                style="@style/st_tv_version" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>